# ColorizeLaTexTables

./: .gitignore  LICENSE  README.md  csvtolatextable.py  pyproject.toml  setup.py
colorizelatextables/: __init__.py  colorize_table.py
examples/: BigTable.csv
test/: multiindex.csv  normal.csv  test_colorize_tables.py
