[tool.poetry]
name = "colorizelatextables"
version = "2.0.0"
description = "Utility library to transform csv files or pandas dataframes to colorized LaTex tables"
authors = ["Daniel Obraczka"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
